tests/snapshots/run_wpt_conformance__onnx_reduceMean_float32_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_mean.https.any.js",
    "reduceMean float32 0D tensor default options",
    "onnx",
    "PASS",
)
